--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html class="hide-scrollbar" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MSD SHOP</title>
+    <title>Dar RIHANA</title>
   </head>
-  <body >
+  <body > 
     <div id="root" class="hide-scrollbar"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
